添加「分享增加摇奶瓶机会」界面

--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -17,7 +17,9 @@
                 <img src="/img/rule.png" alt="">
             </div>
             <div id="rank" class="rank column">
-                <img src="/img/rank.png" alt="">
+                <a href="{{pathFor 'rank'}}">
+                    <img src="/img/rank.png" alt="">
+                </a>
             </div>
         </div>
     </div>
