--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -1,8 +1,25 @@
 <template name="myPrizeList">
     <div class="my-prize-list">
-        <p>使用说明:</p>
-        <p>1、点击使用福利券可获得兑换二维码</p>
-        <p>1、点击使用福利券可获得兑换二维码</p>
-        <p>1、点击使用福利券可获得兑换二维码</p>
+        <div class="descon">
+            <p>使用说明:</p>
+            <p>1、点击使用福利券可获得兑换二维码</p>
+            <p>1、点击使用福利券可获得兑换二维码</p>
+            <p>1、点击使用福利券可获得兑换二维码</p>
+        </div>
+        <div class="prize-list">
+            <div class="prize">
+                <div class="head">
+                    港版强生婴儿牛奶沐浴露300ml
+                </div>
+                <div class="foot row">
+                    <div class="column">
+                        兑换有效期至:2016.09.13
+                    </div>
+                    <div class="column">
+                        未兑换
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </template>
