添加页面： - 我的奖品页面 - 关注页面

--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -12,14 +12,34 @@
                     港版强生婴儿牛奶沐浴露300ml
                 </div>
                 <div class="foot row">
-                    <div class="column">
-                        兑换有效期至:2016.09.13
-                    </div>
-                    <div class="column">
+                    <span>
+                        <nobr>兑换有效期至:2016.09.13</nobr>
+                    </span>
+                    <span class="flex"></span>
+                    <span>
                         未兑换
-                    </div>
+                    </span>
                 </div>
             </div>
         </div>
+
+        <div class="prize-list">
+            <div class="prize used">
+                <div class="head">
+                    港版强生婴儿牛奶沐浴露300ml
+                </div>
+                <div class="foot row">
+                    <span>
+                        兑换有效期至:2016.09.13
+                    </span>
+                    <span class="flex"></span>
+                    <span>
+                        已兑换
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        {{> prizeQrCodeModal}}
     </div>
 </template>
