添加「活动规则页面」

--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -14,7 +14,9 @@
                 <img src="/img/start.png" alt="">
             </div>
             <div id="rule" class="rule column">
-                <img src="/img/rule.png" alt="">
+                <a href="{{pathFor 'rule'}}">
+                    <img src="/img/rule.png" alt="">
+                </a>
             </div>
             <div id="rank" class="rank column">
                 <a href="{{pathFor 'rank'}}">
