1、添加摇奶瓶时的温度减少动画； 2、shake_bottle 页面添加「不可进行游戏」的按钮样式，代码位置在「摇起来」按钮下方； 3、my_prize_list 添加无奖品和活动未开始样式； 4、添加 loading 中的 logo 样式，此样式后期需修改；

--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -39,7 +39,20 @@
                 </div>
             </div>
         </div>
+        <div class="not-start">
+            7月22日活动开始哦!
+        </div>
 
+        <div class="no-prize row">
+            <div class="column">
+                亲~您还没有奖品快摇起来吧!
+            </div>
+            <div class="column">
+                <a href="{{pathFor 'shakeBottle'}}">
+                    <img class="start-game-button" src="/img/start.png" alt="">
+                </a>
+            </div>
+        </div>
         {{> prizeQrCodeModal}}
     </div>
 </template>
