--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -12,6 +12,7 @@
         <div class="row actions">
             <div id="start" class="start column">
                 <img src="/img/start.png" alt="">
+                <img style="display: none;" src="/img/played.png" alt="">
             </div>
             <div id="rule" class="rule column">
                 <a href="{{pathFor 'rule'}}">
