--- a/client/applications/my_prize_list/prize_qrcode_modal.html
+++ b/client/applications/my_prize_list/prize_qrcode_modal.html
@@ -2,7 +2,7 @@
     <div id="prizeQrCodeModal" class="qrcode-modal">
         <p class="use-tip">请向媛育国际母婴健康管理中心一楼服务台出示</p>
         <div class="qrcode-square">
-            <img src="/img/qrcode-test.jpg" alt="">
+            <!--<img src="/img/qrcode-test.jpg" alt="">-->
         </div>
         <p class="prize-name">月子房费8.8折优惠有哟哟(惠民病房除外)</p>
         <div class="actions">
