--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-    <title>喜月媛育 全民摇起来</title>
+    <title>喜月媛育 全民摇奖品</title>
     <meta name="format-detection"content="telephone=no"/>
     <meta id="metaView" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=yes" />
     <!-- 微信 JD-SDK -->
