--- a/client/applications/my_prize_list/prize_qrcode_modal.html
+++ b/client/applications/my_prize_list/prize_qrcode_modal.html
@@ -1,10 +1,11 @@
 <template name="prizeQrCodeModal">
     <div id="prizeQrCodeModal" class="qrcode-modal">
         <p class="use-tip">请向媛育国际母婴健康管理中心一楼服务台出示</p>
+        <!--二维码显示区域-->
         <div class="qrcode-square">
-            <!--<img src="/img/qrcode-test.jpg" alt="">-->
         </div>
         <p class="prize-name">月子房费8.8折优惠有哟哟(惠民病房除外)</p>
+        <!--弹层关闭按钮-->
         <div class="actions">
             <div id="close-button" class="close-button">
                 关&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;闭
