--- a/client/applications/rank/my_rank_modal.html
+++ b/client/applications/rank/my_rank_modal.html
@@ -2,13 +2,17 @@
     <div id="my-rank-modal" class="modal">
         <div class="center-square zoom">
             <div class="content">
+                <!--用户昵称-->
                 <p>啦啦妈妈</p>
                 <p>您的最高纪录为</p>
+                <!--摇奶瓶成绩-->
                 <p>23.87 秒</p>
+                <!--名次-->
                 <p>当前位居 21 名</p>
             </div>
             <div class="row">
                 <div class="column">
+                    <!--弹层关闭按钮-->
                     <img id="close-modal-button" src="/img/close.png" alt="">
                 </div>
             </div>
