--- a/client/applications/rank/week_rank.html
+++ b/client/applications/rank/week_rank.html
@@ -1,7 +1,9 @@
 <template name="weekRank">
     <ul>
         <li class="row">
+            <!--用户昵称-->
             <div class="name">第一名:飞翔的鱼</div>
+            <!--摇奶瓶成绩-->
             <div class="num">6.23</div>
         </li>
         <li class="row">
