--- a/client/applications/rule/rule.html
+++ b/client/applications/rule/rule.html
@@ -1,5 +1,6 @@
 <template name="rule">
     <div class="rule">
+        <!--规则图片-->
         <img src="/img/rule.jpg" alt="">
     </div>
 </template>
