--- a/client/applications/shake_bottle/shake_result_modal.html
+++ b/client/applications/shake_bottle/shake_result_modal.html
@@ -10,11 +10,13 @@
             </div>
             <div class="row">
                 <div class="column">
+                    <!--查看周排名按钮-->
                     <a href="{{pathFor 'rank'}}" >
                         <img id="week-rank-button" src="/img/week-rank-button.png" alt="">
                     </a>
                 </div>
                 <div class="column">
+                    <!--不满足继续摇按钮-->
                     <img id="continue-shake" src="/img/continue-shake.png" alt="">
                 </div>
             </div>
