--- a/client/applications/shake_bottle/share_modal.html
+++ b/client/applications/shake_bottle/share_modal.html
@@ -1,5 +1,6 @@
 <template name="shareModal">
     <div id="share-modal" class="modal">
+        <!--分享界面指引箭头-->
         <div class="point-img">
             <img src="/img/point.png" alt="">
         </div>
@@ -10,6 +11,7 @@
                 <p>可增加一次机会呦</p>
             </div>
             <div class="row">
+                <!--弹层关闭按钮-->
                 <div class="column">
                     <img id="close-share-modal-button" class="close-modal-button" src="/img/close.png" alt="">
                 </div>
