--- a/client/applications/rank/last_Week_Rank.html
+++ b/client/applications/rank/last_Week_Rank.html
@@ -2,9 +2,12 @@
     <ul>
         <li class="row">
             <div>
+                <!--排名图标-->
                 <img src="/img/rank-one.png" alt="">
             </div>
+            <!--用户昵称-->
             <div class="name">阳光宝贝</div>
+            <!--摇奶瓶成绩-->
             <div class="score">3.76</div>
         </li>
         <li class="row">
