--- a/client/applications/rank/rank.html
+++ b/client/applications/rank/rank.html
@@ -3,6 +3,7 @@
         <div class="row rank-square">
             <div class="column week-rank">
                 <img src="/img/week-rank.png" alt="">
+                <!--本周排名-->
                 {{> weekRank}}
             </div>
             <div class="vertical-divider">
@@ -14,6 +15,7 @@
                     <!--<div>微信昵称</div>-->
                     <!--<div>游戏时间</div>-->
                 <!--</div>-->
+                <!--上周 top3 -->
                 {{> lastWeekRank}}
                 <div class="content">
                     恭喜以上三位大奖得主! 请及时到媛育月子中心兑换奖品!
@@ -22,9 +24,11 @@
         </div>
         <div class="row my-rank">
             <div class="column">
+                <!--我的排名按钮-->
                 <img id="my-rank-button" src="/img/my-rank.png" alt="">
             </div>
         </div>
     </div>
+    <!--我的排名弹层-->
     {{> myRankModal}}
 </template>
