--- a/client/applications/rank/week_rank.html
+++ b/client/applications/rank/week_rank.html
@@ -1,30 +1,10 @@
 <template name="weekRank">
     <ul>
-        <li class="row">
-            <!--用户昵称-->
-            <div class="name">第一名:飞翔的鱼</div>
-            <!--摇奶瓶成绩-->
-            <div class="num">6.23</div>
-        </li>
-        <li class="row">
-            <div class="name">第二名:solid</div>
-            <div class="num">7.82</div>
-        </li>
-        <li class="row">
-            <span class="name">第三名:天天吃瓜</span>
-            <span class="num">8.00</span>
-        </li>
-        <li class="row">
-            <span class="name">第四名:凌云</span>
-            <span class="num">8.99</span>
-        </li>
-        <li class="row">
-            <span class="name">第五名:天霸动霸Tua</span>
-            <span class="num">11.23</span>
-        </li>
-        <li class="row">
-            <span class="name">第六名:李根冷Tua</span>
-            <span class="num">39.35</span>
-        </li>
+        {{# each topList }}
+          <li class="row">
+              <div class="name">第{{topNo(@index)}}名:{{nickname}}</div>
+              <div class="num">{{formatTime(time)}}</div>
+          </li>
+        {{/each}}
     </ul>
 </template>
