加入 md5 加密模块，加入微信分享加 1次使用次数。加入微信配置。

--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -5,6 +5,7 @@
       <p>1、点击使用福利券可获得兑换二维码</p>
       <p>1、点击使用福利券可获得兑换二维码</p>
       <p>1、点击使用福利券可获得兑换二维码</p>
+      <p style="display:none">{{share}}</p>
     </div>
     {{# if hasPrizes}}
         <!-- 我的奖品列表 -->
