加入已玩过，晚上分享后摇奖次数 加1

--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -16,8 +16,7 @@
         <div class="row actions">
             <!--摇奖品按钮-->
             <div id="start" class="start column">
-                <img src="/img/start.png" alt="">
-                <img style="display: none;" src="/img/played.png" alt="">
+                {{> shakeBottleStart }}
             </div>
             <!--查看游戏规则按钮-->
             <div id="rule" class="rule column">
