完善晃动奶瓶时的声音持续性。

--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -31,9 +31,18 @@
                 </a>
             </div>
         </div>
-        <!--奶瓶欢动音效-->
-        <audio id="shake-sound" src="/audio/shake.mp3" loop="loop"></audio>
-        <audio id="shake-sound2" src="/audio/shake.mp3" loop="loop"></audio>
+
+        <!--发奖时的声音提示-->
+        <audio id="dingSound" preload="auto" src="/audio/ding.mp3"></audio>
+        <!--奶瓶晃动音效-->
+        <audio id="long-shake-sound" preload="auto" src="/audio/long-shake.mp3" loop="loop"></audio>
+        <!--<audio id="shake-sound1" src="/audio/shake.mp3" loop="loop"></audio>-->
+        <!--<audio id="shake-sound2" src="/audio/shake.mp3" loop="loop"></audio>-->
+
+        <!--<audio id="shake-sound3" src="/audio/shake.mp3" loop="loop"></audio>-->
+
+        <!--<audio id="shake-sound4" src="/audio/shake.mp3" loop="loop"></audio>-->
+
     </div>
     <!--shake 测试区-->
     <!--<div class="test">-->
