规则页面图片通过切片优化加载速度； 排名页面中的虚线位置调整；

--- a/client/applications/rule/rule.html
+++ b/client/applications/rule/rule.html
@@ -1,6 +1,15 @@
 <template name="rule">
     <div class="rule">
         <!--规则图片-->
-        <img src="/img/rule.jpg" alt="">
+        <img src="/img/rule_01.jpg" alt="">
+        <img src="/img/rule_02.jpg" alt="">
+        <img src="/img/rule_03.jpg" alt="">
+        <img src="/img/rule_04.jpg" alt="">
+        <img src="/img/rule_05.jpg" alt="">
+        <img src="/img/rule_06.jpg" alt="">
+        <img src="/img/rule_07.jpg" alt="">
+        <img src="/img/rule_08.jpg" alt="">
+        <img src="/img/rule_09.jpg" alt="">
+        <img src="/img/rule_10.jpg" alt="">
     </div>
 </template>
