更改「我的奖品」页面中“摇奖品”按钮的链接

--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -26,7 +26,7 @@
                   亲~您还没有奖品快摇起来吧!
                 </div>
                 <div class="column">
-                  <a href="{{pathFor 'shakeBottle'}}">
+                  <a href="http://yuanyu.muyingpai.cn/activity/hQbtHQgPo5TCRpgcj/shake_bottle">
                     <img class="start-game-button" src="/img/start.png" alt="">
                   </a>
                 </div>
