优化排名页面在只有一栏内容时的样式。

--- a/client/applications/rank/last_Week_Rank.html
+++ b/client/applications/rank/last_Week_Rank.html
@@ -12,6 +12,7 @@
                         <!--用户昵称-->
                         <div class="name">{{nickname}}</div>
                         <!--摇奶瓶成绩-->
+                        <span class="flex"></span>
                         <div class="score">{{formatTime(time)}}</div>
                     </li>
                 {{/each}}
