--- a/client/applications/rank/week_rank.html
+++ b/client/applications/rank/week_rank.html
@@ -6,6 +6,7 @@
           {{# each topList }}
             <li class="row">
                 <div class="name">第{{topNo(@index)}}名:{{nickname}}</div>
+                <span class="flex"></span>
                 <div class="num">{{formatTime(time)}}</div>
             </li>
           {{/each}}
