--- a/client/applications/my_prize_list/my_prize_list.html
+++ b/client/applications/my_prize_list/my_prize_list.html
@@ -5,6 +5,8 @@
       <p>1、点击使用福利券可获得兑换二维码</p>
       <p>2、向媛育国际母婴健康管理中心一楼服务台出示二维码并兑换纸质优惠券</p>
       <p>3、本优惠券兑换截止日期为2016年8月31日(逾期作废)</p>
+      <p>4、领奖地址：新华西路358号（友谊大街与新华路交叉口西南角市六院院内）</p>
+      <p>3、联系电话：0311-88827766</p>
       <p style="display:none">{{share}}</p>
     </div>
     {{# if hasPrizes}}
