我的排名，已参与后显示昵称。

--- a/client/applications/rank/my_rank_modal.html
+++ b/client/applications/rank/my_rank_modal.html
@@ -12,7 +12,7 @@
                     <!--名次-->
                     <p>位居第 {{top}} 名</p>
                   {{/each}}
-                {{ else }
+                {{ else }}
                   您还没有参与活动。
                 {{/if}}
             </div>
