--- a/client/applications/rank/last_Week_Rank.html
+++ b/client/applications/rank/last_Week_Rank.html
@@ -27,4 +27,9 @@
             <div class="score">5.28</div>
         </li> -->
     </ul>
+    {{# if hasTop}}
+      <div class="content">
+          恭喜以上三位大奖得主! 请及时到媛育月子中心兑换奖品!
+      </div>
+    {{/if}}
 </template>
