--- a/client/applications/shake_bottle/shake_bottle.html
+++ b/client/applications/shake_bottle/shake_bottle.html
@@ -16,7 +16,7 @@
         <div class="row actions">
             <!--摇奖品按钮-->
             <div id="start" class="start column">
-                {{> shakeBottleStart _id=_id }}
+                {{> shakeBottleStart _id=_id isNone=isNone }}
             </div>
             <!--查看游戏规则按钮-->
             <div id="rule" class="rule column">
