--- a/client/applications/shake_bottle/shake_bottle_start.html
+++ b/client/applications/shake_bottle/shake_bottle_start.html
@@ -2,6 +2,10 @@
   {{# if none}}
     <img src="/img/played.png" alt="">
   {{ else }}
-    <img id="#start" src="/img/start.png" alt="">
+    {{# if watching}}
+      <img src="/img/shake-start.png" alt="">
+    {{ else }}
+      <img src="/img/start.png" alt="">
+    {{/if}}
   {{/if}}
 </template>
