升级摇奶瓶Meteor版本

--- a/client/applications/focus/focus.html
+++ b/client/applications/focus/focus.html
@@ -4,7 +4,7 @@
             请先关注服务号<br>
             媛育国际母婴健康管理中心
         </p>
-        <img src="/img/yy-qrcode.jpg" alt="">
+        <img src="/img/stillflaw-qrcode.jpg" alt="">
         <p class="use-tip-bottom">按住二维码,在弹出菜单中选择【识别图中二维码】</p>
     </div>
 </template>
